--- a/.csslintrc
+++ b/.csslintrc
@@ -1,3 +1,37 @@
 {
-  "box-model": true
+  "important": true,
+  "adjoining-classes": false,
+  "known-properties": false,
+  "box-sizing": false,
+  "box-model": false,
+  "overqualified-elements": false,
+  "display-property-grouping": false,
+  "bulletproof-font-face": false,
+  "compatible-vendor-prefixes": true,
+  "regex-selectors": false,
+  "errors": true,
+  "duplicate-background-images": true,
+  "duplicate-properties": true,
+  "empty-rules": true,
+  "selector-max-approaching": false,
+  "gradients": true,
+  "fallback-colors": false,
+  "font-sizes": false,
+  "font-faces": false,
+  "floats": false,
+  "star-property-hack": false,
+  "outline-none": false,
+  "import": true,
+  "ids": true,
+  "underscore-property-hack": true,
+  "rules-count": true,
+  "qualified-headings": false,
+  "selector-max": false,
+  "shorthand": false,
+  "text-indent": false,
+  "unique-headings": false,
+  "universal-selector": false,
+  "unqualified-attributes": true,
+  "vendor-prefix": true,
+  "zero-units": true
 }
