--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "Csshelper",
   "version": "0.1.1",
-  "description": "A Css helper to forget traditional frameworks approach.",
+  "description": "A css helper to forget traditional frameworks approach.",
   "authors": [
     "Dario Andrei <wouldgo84@gmail.com>",
     "Filippo Oretti <filippo.oretti@gmail.com"
