--- a/package.json
+++ b/package.json
@@ -1,16 +1,31 @@
 {
   "name": "csshelper",
-  "description": "another css helper",
-  "version": "0.0.1",
-  "private": true,
-  "keywords": [
+  "version": "1.0.0",
+  "description": "A css helper to forget traditional frameworks approach.",
+  "license": "MIT",
+  "homepage": "https://github.com/720kb/csshelper",
+  "author": "Filippo Oretti <filippo.oretti@gmail.com",
+  "contributors": [
+    "Dario Andrei <wouldgo84@gmail.com>"
   ],
-  "dependencies": {
-
+  "keywords": [
+    "css",
+    "helper",
+    "css3",
+    "responsive",
+    "mobile"
+  ],
+  "bugs": {
+    "url": "http://github.com/720kb/csshelper/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/720kb/csshelper.git"
   },
   "devDependencies": {
-    "grunt": "*",
-    "grunt-contrib-csslint": "*",
-    "grunt-contrib-cssmin": "*"
+    "grunt": "^0.4.5",
+    "grunt-contrib-csslint": "^0.4.0",
+    "grunt-contrib-cssmin": "^0.12.2",
+    "grunt-header": "^1.0.0"
   }
 }
