--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "assets/ext"]
 	path = assets/ext
-	url = git://github.com/720kb/csshelper.git
+  url = https://github.com/wouldgo/csshelper.git
